Add documentation for E3-M0 preparatory fixes, including Telegram session continuity, SPRING_AI_CHAT_MEMORY cleanup, and project-specific system prompt enhancements